# gemini-service-account-example

./: .gitignore  .terraform.lock.hcl  outputs.tf  project.tf  service-account.tf
gemini-sample-code/: README.md  gemini-test.py  pyproject.toml
